fix teamcard mix blend mod on safari

--- a/src/components/TeamCard/styles.scss
+++ b/src/components/TeamCard/styles.scss
@@ -7,9 +7,9 @@
   box-shadow: var(--shadow-lg);
   transition: 0.5s;
   transform-style: preserve-3d;
-  overflow: hidden;
 
-  &:hover &-image-container::before {
+  &:hover &-image-container::after {
+    border-radius: var(--radius-xl);
     opacity: var(--opacity-1);
   }
 
@@ -32,10 +32,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: var(--radius-xl);
-    overflow: hidden;
 
-    &::before {
+    &::after {
       content: '';
       position: absolute;
       top: 0;
@@ -47,7 +45,7 @@
         rgb(0, 148, 40) 0%,
         rgba(0, 0, 0, 1) 100%
       );
-      overflow: hidden;
+
       z-index: 1;
       opacity: var(--opacity-0);
       transition: 0.2s;
